# collaborative-filtering-listenbrainz

./: .gitignore  Assignment Report.md  README.md  analysis.py  artist_search.py  data_loader.py  data_quality.py  directory_util.py  html_report.py  listenbrainz.py  listenbrainz_report.py  pyproject.toml  requirements.txt  utils.py
data/samples/: 1.listens_sample.json  canonical_musicbrainz_data_sample.csv  canonical_recording_redirect_sample.csv  listenbrainz_msid_mapping_sample.csv  musicbrainz_artist_credits_sample.csv  musicbrainz_artist_sample.csv
notebooks/: AMPLab_2025_Initial_steps.ipynb  data_exploration.ipynb
results/: last_search.json
results/.cache/: lastfm_cache.json
results/recommendations/: similar_to_Alvvays.csv  similar_to_Blackfield.csv  similar_to_Emancipator.csv  similar_to_Foo_Fighters.csv  similar_to_Men_I_Trust.csv  similar_to_Metric.csv  similar_to_Muse.csv  similar_to_Nirvana.csv  similar_to_Radiohead.csv  similar_to_Steven_Wilson.csv  similar_to_The_Midnight.csv  similar_to_The_Pineapple_Thief.csv  similar_to_The_Strokes.csv  similar_to_Timecop1983.csv  similar_to_Tycho.csv  similar_to_Yumi_Zouma.csv
results/report/: report.html
results/report/.cache/: musicbrainz_cache.json
results/report/data/: artist_distribution.json  artist_diversity.json  data_quality.json  dataset_summary.json  lastfm_comparison.json  recommendations_analysis.json  user_segments.json
